nav bar btm + input text + icone

--- a/assets/style.css
+++ b/assets/style.css
@@ -38,6 +38,10 @@ body{
     justify-content: center;
 }
 
+.align-center{
+    align-items: center;
+}
+
 .column{
     flex-direction: column;
 }
@@ -78,7 +82,39 @@ body{
 }
 
 .col-large .accesso p{
-    color: #B1B1B1;
+    color: #747E80;
+}
+
+.col-large .nav-btm .emoji{
+    width: 75px;
+    height: 100%;
+}
+
+.col-large .nav-btm .scrivi{
+    width: 90%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.col-large .nav-btm .scrivi #txt{
+    height: 50px;
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    color: #9A9999;
+}
+
+.col-large .nav-btm .vocale{
+    width: 75px;
+    height: 100%;
+}
+
+.col-large .nav-btm i{
+    color: #697277;
+    font-size: 1.5rem;
 }
 
 .nav{
@@ -110,6 +146,7 @@ body{
     height: 50px;
     justify-content: center;
     align-items: center;
+    background-color: #FAFAFA;
 }
 
 .search i{
