--- a/assets/style.css
+++ b/assets/style.css
@@ -127,6 +127,13 @@ body{
     height: 50px;
     width: 50px;
     margin: 10px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.image-top img{
+    object-fit: cover;
+    width: 100%;
 }
 
 
@@ -146,7 +153,7 @@ body{
     height: 50px;
     justify-content: center;
     align-items: center;
-    background-color: #FAFAFA;
+    background-color: #EAE9EA;
 }
 
 .search i{
@@ -162,15 +169,36 @@ body{
     border-color: transparent;
 }
 
+.users{
+    background-color: #EAE9EA;
+}
+
 .user{
     height: 100%;
     width: 100%;
+    background-color: white;
+    border: 1px solid #C3C7C8;
 }
 
-.image{
+.user .image{
     height: 50px;
     width: 50px;
     margin: 15px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.user .image img{
+    object-fit: cover;
+    width: 100%;
+}
+
+.user .text{
+    text-align:justify;
+}
+
+.user .text p{
+    color: #747E80
 }
 
 .col-sm .icone{
@@ -190,7 +218,7 @@ body{
 }
 
 .users .text{
-    width: calc(100% - 65px);
+    width: calc(100% - 50px - 30px - 15px);
 }
 
 .main-chat{
