--- a/assets/style.css
+++ b/assets/style.css
@@ -251,9 +251,15 @@ body{
     width: calc(100% - 50px - 30px - 15px - 35px);
 }
 
-.main-chat{
+.col-large{
+    background-color: white;
+}
+
+.col-large .main-chat{
     height: calc(100% - 140px);
+    width: calc(100% - 15px);
     overflow-y: auto;
+    background-image: url(/img/mine.jpg);
 }
 
 
