--- a/assets/style.css
+++ b/assets/style.css
@@ -289,7 +289,7 @@ body{
 
 .main-chat .msg-sent i, .main-chat .msg-received i{
     position: absolute;
-    top: 15px;
+    bottom: 60px;
     right: 15px;
 }
 
@@ -311,6 +311,66 @@ body{
     margin-bottom: 5px;
     margin-right: 5px;
     color: #747E80;
+}
+
+.main-chat .msg-sent .msg-menu{
+    cursor: pointer;
+    position: relative;
+}
+
+.main-chat .msg-received .msg-menu{
+    cursor: pointer;
+    position: relative;
+}
+
+.main-chat .msg-sent .msg-menu-panel{
+    display: none;
+    position: absolute;
+    right: 20px;
+    bottom: -20px;
+    width: 160px;
+    height: 80px;
+    background-color: white;
+    box-shadow: 1px 1px 3px grey;
+}
+
+.main-chat .msg-received .msg-menu-panel{
+    display: none;
+    position: absolute;
+    right: 20px;
+    bottom: -20px;
+    width: 160px;
+    height: 80px;
+    background-color: white;
+    box-shadow: 1px 1px 4px grey;
+}
+
+.main-chat .msg-sent .msg-menu:hover > .msg-menu-panel{
+    display: block;
+}
+
+.main-chat .msg-received .msg-menu:hover > .msg-menu-panel{
+    display: block;
+}
+
+.main-chat .msg-sent .msg-menu-panel > div{
+    cursor: pointer;
+    width: 100%;
+    height: 50%;
+}
+
+.main-chat .msg-received .msg-menu-panel > div{
+    cursor: pointer;
+    width: 100%;
+    height: 50%;
+}
+
+.main-chat .msg-sent .msg-menu-panel .info:hover, .main-chat .msg-sent .msg-menu-panel .cancel:hover{
+    background-color: #B1B1B1;
+}
+
+.main-chat .msg-received .msg-menu-panel .info:hover, .main-chat .msg-received .msg-menu-panel .cancel:hover{
+    background-color: #B1B1B1;
 }
 
 /********************************************
